# mb-bmstu-works

./: README.md
1-year/algorithms-and-data-structures/lab-0/: CMakeLists.txt  Set.cpp  Set.h  main.cpp  types.h
1-year/algorithms-and-data-structures/lab-2/: Table.cpp
1-year/informatics/: Readme.md
1-year/informatics/task-2.G.52/: CMakeLists.txt  Readme.md  main.cpp
1-year/informatics/task-2.G.54/: Readme.md  main.cpp
1-year/programming-in-high-level-languages/: Readme.md
1-year/programming-in-high-level-languages/1st-semester/: Readme.md
1-year/programming-in-high-level-languages/exam-1st-semester/: CMakeLists.txt  Readme.md  functions.cpp  functions.h  main.cpp  structs.h
1-year/programming-in-high-level-languages/laboratory-work-1/: Readme.md  main.cpp
1-year/programming-in-high-level-languages/laboratory-work-2/: main.cpp
algorithms-and-data-structures/: Readme.md
algorithms-and-data-structures/2nd-semester/laboratory-work-2/: CMakeLists.txt  KeyOrdTable.h  Readme.md  ValueOrdTable.cpp  ValueOrdTable.h  main.cpp
algorithms-and-data-structures/2nd-semester/laboratory-work-2/FrOrdTable/: FrOrdTable.cpp  FrOrdTable.h
algorithms-and-data-structures/2nd-semester/laboratory-work-2/KeyOrdTable/: KeyOrdTable.cpp  KeyOrdTable.h
algorithms-and-data-structures/2nd-semester/laboratory-work-2/Table/: Table.cpp  Table.h  TableElement.h
algorithms-and-data-structures/2nd-semester/laboratory-work-2/ValueOrdTable/: ValueOrdTable.h
informatics/: Readme.md
informatics/1st-semester/task-2.G.52/: Readme.md
programming-in-high-level-languages/: Readme.md
(+256 files in other folders)
